--- a/mag_check/css/style.css
+++ b/mag_check/css/style.css
@@ -1,62 +1,9 @@
 /*!DOCTYPE css*/
 
 html {
-    background-color: #004b8d;
-    color:#FFFFFF
+    background-color: #FFFFFF;
+    color:#004b8d
 }
-
-/* ? Created by Slaying the Dragon */
-.container {
-    max-width: 1536px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    /* //border: 1px solid red */
-  }
-  
-  /* * 2xl */
-  @media (max-width: 1536px) {
-    .container {
-      max-width: 1280px;
-    }
-  }
-  
-  /* * xl */
-  @media (max-width: 1280px) {
-    .container {
-      max-width: 1024px;
-    }
-  }
-  
-  /* * lg */
-  @media (max-width: 1024px) {
-    .container {
-      max-width: 768px;
-    }
-  }
-  
-  /* * md */
-  @media (max-width: 768px) {
-    .container {
-      max-width: 640px;
-    }
-  }
-  
-  /* * sm */
-  @media (max-width: 640px) {
-    .container {
-      max-width: 475px;
-    }
-  }
-  
-  /* * xs */
-  @media (max-width: 475px) {
-    .container {
-      width: 100%;
-    }
-  }
-/* ? End of Copy */
 
 /* * Classes Below * */
 .WIP {
@@ -68,33 +15,43 @@ html {
   margin: auto;
   padding: 5px;
   z-index: 1;
-  border: thick solid white;
-  /* background-color: white; */
+  color: white;
+  background-color: #004b8d;
 }
 
 .intra_link {
   background-color: white;
+  margin: auto;
   color: #004b8d;
   padding: 20px;
   align-self: start;
   position: sticky;
+  text-align: center;
   top: 0;
+  left: 45%;
 }
 
-.article {
-  margin: 1rem;
-  padding: 1rem;
-  background-color: #88B1E7;
-  color: white
+.topnav {
+  background-color: #004b8d;
+  overflow: hidden;
 }
 
-
-.art_sample {
-  margin-left: 40px
+.topnav a {
+  float: left;
+  color: white;
+  height: 46px;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 24px;
 }
 
-.art_title {
-  color: #347AD5;
+.topnav a:hover {
+  background-color: #0c3d74;
+}
+
+.topnav a.active {
+  background-color: #0c3d74;
 }
 
 /* * ID's Below *  */
@@ -102,9 +59,8 @@ html {
   width: 50%;
 }
 
-
-#header {
-    text-align: center;
+#nav_logo {
+  height: 46px;
 }
 
 #main_body {
@@ -112,11 +68,56 @@ html {
   grid-template-columns: 7.8125rem auto;
 }
 
-#article_container {
-  background-color: #565C7F;
-  padding: 10px
+
+/* ? Created by Slaying the Dragon */
+.container {
+  max-width: 1536px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  /* //border: 1px solid red */
 }
 
-#art_cont_title {
-text-align: center;
+/* * 2xl */
+@media (max-width: 1536px) {
+  .container {
+    max-width: 1280px;
+  }
 }
+
+/* * xl */
+@media (max-width: 1280px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+/* * lg */
+@media (max-width: 1024px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+/* * md */
+@media (max-width: 768px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+/* * sm */
+@media (max-width: 640px) {
+  .container {
+    max-width: 475px;
+  }
+}
+
+/* * xs */
+@media (max-width: 475px) {
+  .container {
+    width: 100%;
+  }
+}
+/* ? End of Copy */
